[gd_scene load_steps=4 format=1]

[ext_resource path="res://main/buttons/btn_tower.gd" type="Script" id=1]
[ext_resource path="res://towers/tower_sniper/tower_sniper.png" type="Texture" id=2]
[ext_resource path="res://shared/fonts/railway.fnt" type="Font" id=3]

[node name="btn_tower" type="Button"]

margin/right = 128
margin/bottom = 64
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
toggle_mode = false
flat = false
script/script = ExtResource( 1 )
__meta__ = { "__editor_plugin_screen__":"Script" }
tower_scene = null

[node name="icon" type="Sprite" parent="."]

transform/pos = Vector2( 24, 32 )
texture = ExtResource( 2 )
vframes = 3

[node name="label" type="Label" parent="."]

anchor/right = 1
anchor/bottom = 1
margin/left = 43
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
custom_fonts/font = ExtResource( 3 )
text = "Name"
align = 1
valign = 1
percent_visible = 1
lines_skipped = 0
max_lines_visible = -1

[connection signal="pressed" from="." to="." method="_on_btn_tower_pressed"]

[connection signal="mouse_enter" from="." to="." method="_on_btn_tower_mouse_enter"]

[connection signal="mouse_exit" from="." to="." method="_on_btn_tower_mouse_exit"]


